# chess-bot-legacy

./: ChessGet (V2).py  MindEye2.py  MindEyeTest V2.py  Old1.py  README.md
Engines/: DeepHiarcs14AS.pgn
Engines/Pulse/: CHANGES.md  LICENSE  README.md  pulseVSpulsecpp.at
Engines/Rodent III/: README.windows.txt  basic.ini
Engines/Rodent III - Strangler/: rodent.txt  strangler.txt
Engines/Spike/: Spike.cnfg
Engines/Sungorus/: sungorus32  sungorus64
Engines/da-165/: da.ino  readme.txt
Engines/giraffe_20161023/: eval.t7  giraffe.eng
PythonChessBot/: Vec2.py  bot.py  constants.py  js_classes.py  main.py  selenium_canvas.py  selenium_chess.py
VersionC++/ChessBot/: ChessBot.sln
VersionC++/Dependencies/: List.txt
VersionCPP/: main.cpp
VersionCPPa/: CMakeLists.txt  main.cpp
VersionCppa/ChessBot/: CMakeLists.txt  main.cpp
VersionPy/: ChessGet (V2).py  CleanedUp.py  DeepHiarcs14AS.pgn  Hiarcs14AS.pgn  MindEye2.py  MindEyeTest V2.py  Old1.py  Web.py  selenium_session.txt  test.py
pgnToFen-master/: .gitignore  README.md  compareLib.py  fenStats.py  pgntofen.py  pgntofen.test.py  problematic-pgns.pgn
tensorflow_chessbot-chessfenbot/: .gitignore  Dockerfile  EngineMover.py  EngineType2.py  FastMatch.py  Independence.py  LICENSE  NewEngine.py  cfb_helpers.py  chessTempo.py  chessboard_finder.py  chessbot.py  dataset.py  helper_functions.py  helper_functions_chessbot.py  helper_image_loading.py  helper_webkit2png.py  message_template.py  pgntofen.py  readme.md  run_chessbot.sh  tensorflow_chessbot.py  tileset_generator.py  watch.sh  webkit2png.py
(+137 files in other folders)
